--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="wrapper-masthead">
     <div class="container">
       <header class="masthead clearfix">
-        <a href="/" class="site-avatar"><img src="/images/ryan2.jpeg" /></a>
+        <a href="/" class="site-avatar"><img src="/images/ryan2.png" /></a>
 
         <div class="site-info">
           <h1 class="site-name"><a href="/">Ryan Speed</a></h1>
