--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -30,7 +29,7 @@
   <div class="wrapper-masthead">
     <div class="container">
       <header class="masthead clearfix">
-        <a href="/" class="site-avatar"><img src="/images/ryan2.png" /></a>
+        <a href="/" class="site-avatar"><img src="http://i67.tinypic.com/1zzosjd.jpg" /></a>
 
         <div class="site-info">
           <h1 class="site-name"><a href="/">Ryan Speed</a></h1>
