--- a/portfolio.html
+++ b/portfolio.html
@@ -187,14 +187,14 @@
                                 </div>
                             </div>
                              <div class="page-portfolio__items-container layout-row">
-                            <div class="page-portfolio__item-wrapper">
+                        <div class="page-portfolio__item-wrapper">
                                 <div class="page-portfolio__item">
                                     <a href="portfolio-single.html">
-                                        <img class="page-portfolio__image" src="uploads/portfolio/girl-with-orange-small.jpg" alt="Autumn collection">
+                                        <img class="page-portfolio__image" src="uploads/portfolio/girl-with-orange-small.jpg" alt="Faces">
                                     </a>
                                     <div class="page-portfolio__item__info">
                                         <h2 class="page-portfolio__item__title">Spot 5</h2>
-                                        <div class="page-portfolio__item__content">Coming Soon</div>
+                                        <div class="page-portfolio__item__content"></div>
                                         <a class="btn btn-lg btn--style2" href="portfolio-single.html">See More <i class="fa fa-arrow-right"></i></a>
                                     </div>
                                 </div>
@@ -220,7 +220,7 @@
                 </div>
                 <!-- end .layout-content -->
                 <div class="footer--bottom layout-row">
-                    <p class="footer__copyright">&copy; Rossi, 2015. All rights reserved.</p>
+                    <p class="footer__copyright">&copy; Speed, 2016. All rights reserved.</p>
                 </div>
             </div>
         </div>
