--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
             <div class="layout-sidebar layout-sidebar-width">
                 <!-- .sidebar -->
                 <div class="sidebar">
-                    <div class="sidebar__site-name">Ryan Speed.</div>
+                    <div class="sidebar__site-name">Ryan Speed</div>
                     <div class="widget">
                         <ul class="widget__list">
                             <li>Data Scientist</li>
