--- a/blog-single.html
+++ b/blog-single.html
@@ -43,23 +43,23 @@
                                 <span class="main-nav__item-icon-wrapper">
                                     <i class="main-nav__item-icon icon-stats-bars2"></i>
                                 </span>
-                                <span class="main-nav__item-content">Services</span>
+                                <span class="main-nav__item-content">Projects</span>
                             </a>
                         </li>
                         <li class="main-nav__item">
                             <a class="main-nav__item-link" href="portfolio.html">
                                 <span class="main-nav__item-icon-wrapper">
-                                    <i class="main-nav__item-icon icon-books"></i>
+                                    <i class="main-nav__item-icon icon-blog"></i>
                                 </span>
-                                <span class="main-nav__item-content">Portfolio</span>
+                                <span class="main-nav__item-content">blog</span>
                             </a>
                         </li>
                         <li class="main-nav__item main-nav__item--active">
-                            <a class="main-nav__item-link" href="blog.html">
+                            <a class="main-nav__item-link" href="portfolio.html">
                                 <span class="main-nav__item-icon-wrapper">
                                     <i class="main-nav__item-icon icon-blog"></i>
                                 </span>
-                                <span class="main-nav__item-content">Blog</span>
+                                <span class="main-nav__item-content">getaways</span>
                             </a>
                         </li>
                         <li class="main-nav__item">
@@ -125,7 +125,7 @@
                     </ul>
                     <!-- end .social-icons -->
                     <footer class="footer">
-                        <p class="footer__copyright">&copy; Rossi, 2015. All rights reserved.</p>
+                        <p class="footer__copyright">&copy; Speed, 2016. All rights reserved.</p>
                     </footer>
                 </div>
                 <!-- end .sidebar -->
@@ -137,14 +137,14 @@
                     <section class="blog-single">
                         <div class="layout-title-wrapper layout-row">
                             <h1 class="layout-title layout-container-width layout-container">blog.
-                                <span class="layout-title__subtitle">ABOUT EVERYTHING</span>
+                                <span class="layout-title__subtitle">Topic here</span>
                             </h1>
                         </div>
                         <div class="layout-row">
                             <img class="blog-single__image" src="uploads/blog/desktop.jpg" alt="">
                         </div>
                         <div class="blog-single__contents layout-horizontal-padding">
-                            <h2 class="blog-single__title">How Workspace Influences Productivity</h2>
+                            <h2 class="blog-single__title">Title</h2>
                             <ul class="blog-post__article-info">
                                 <li>
                                     <a href="blog-single.html#">
@@ -295,7 +295,7 @@
                 </div>
                 <!-- end .layout-content -->
                 <div class="footer--bottom layout-row">
-                    <p class="footer__copyright">&copy; Rossi, 2015. All rights reserved.</p>
+                    <p class="footer__copyright">&copy; Speed, 2016. All rights reserved.</p>
                 </div>
             </div>
         </div>
