--- a/resume.html
+++ b/resume.html
@@ -175,7 +175,7 @@
                                                     <img src="uploads/resume/lbeach.png" alt=""> </div>
                                                 <div class="timeline-item__col timeline-item__col--description">
                                                     <div class="timeline-item__title">Graduate Assistant - Statistical Consulting </div>
-                                                    <div class="timeline-item__description">Worked in a team on projects (research,medical) for clients under the guidance of a statistician.I assembled weekly progress reports and updated objectives. The results often presented formally. 
+                                                    <div class="timeline-item__description">Worked in a team on projects (research,medical) for clients under the guidance of a statistician. I assembled weekly progress reports and updated objectives. The results were often presented both formally and informally. 
                                                 </div>
 
 
