--- a/resume.html
+++ b/resume.html
@@ -367,7 +367,7 @@
                                                     <div class="achievement-grid__cell">
                                                         <div class="achievement-item">
                                                             <div class="achievement-item__icon">
-                                                          <img src="uploads/resume/SOA.jpg" alt=""> 
+                                                          <img src="uploads/resume/SOA.png" alt=""> 
                                                             </div>
                                                             <div class="achievement-item__titles">
                                                                 <div class="achievement-item__title">Actuarial </div>
