--- a/blog-single.html
+++ b/blog-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Savvy - Blog</title>
+        <title>Ryan Speed</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Savvy version 1.0.4 date: 2015-06-13 08:59:50 -->
         <!-- stylesheets -->
@@ -96,13 +96,12 @@
             <div class="layout-sidebar layout-sidebar-width">
                 <!-- .sidebar -->
                 <div class="sidebar">
-                    <div class="sidebar__site-name">paul rossi.</div>
+                    <div class="sidebar__site-name">Ryan Speed</div>
                     <div class="widget">
                         <ul class="widget__list">
-                            <li>web developer</li>
-                            <li>photographer</li>
-                            <li>soccer fan</li>
-                            <li>father of two</li>
+                             <li>Data Scientist</li>
+                            <li>Baseball Fan</li>
+                            <li>Avid Golfer</li>
                         </ul>
                     </div>
                     <!-- .social-icons -->
