--- a/blog-single.html
+++ b/blog-single.html
@@ -57,7 +57,7 @@
                             </a>
                         </li>
                         <li class="main-nav__item main-nav__item--active">
-                            <a class="main-nav__item-link" href="portfolio.html">
+                            <a class="main-nav__item-link" href="blog.html">
                                 <span class="main-nav__item-icon-wrapper">
                                     <i class="main-nav__item-icon icon-blog"></i>
                                 </span>
