--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <ul class="widget__list">
                             <li>Data Scientist</li>
                             <li>Baseball Fan</li>
-                            <li>Avid Golfer</li>
+                            <li>Golfer</li>
                             <li></li>
                         </ul>
                     </div>
