--- a/resume.html
+++ b/resume.html
@@ -163,7 +163,35 @@
                                         <div class="timeline timeline--layout layout-container">
                                             <div class="timeline-item">
                                                 <div class="timeline-item__col timeline-item__col--info">
-                                                    <div class="timeline-item__period">Oct 2015 - Now</div>
+                                                    <div class="timeline-item__period">Jul 2016 - Now</div>
+                                                    <div class="timeline-item__place">Teradata Labs</div>
+                                                    <div class="timeline-item__location">San Diego, CA</div>
+                                                    <img src="uploads/resume/lbeach.png" alt=""> </div>
+                                                <div class="timeline-item__col timeline-item__col--description">
+                                                    <div class="timeline-item__title">Data Scientist </div>
+                                                    <div class="timeline-item__description"> 
+                                                    --- 
+                                                </div>
+
+
+                                            </div>
+                                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                            <div class="timeline-item">
+                                                <div class="timeline-item__col timeline-item__col--info">
+                                                    <div class="timeline-item__period">Oct 2015 - Jul 2016</div>
                                                     <div class="timeline-item__place">Voodoo Sports</div>
                                                     <div class="timeline-item__location">San Francisco, CA</div>
 
@@ -177,21 +205,7 @@
 
                                             </div>
                                             <hr class="divider layout-row">
-                                            <div class="timeline-item">
-                                                <div class="timeline-item__col timeline-item__col--info">
-                                                    <div class="timeline-item__period">Dec 2014 - May 2014</div>
-                                                    <div class="timeline-item__place">Cal State Long Beach</div>
-                                                    <div class="timeline-item__location">Long Beach, CA</div>
-                                                    <img src="uploads/resume/lbeach.png" alt=""> </div>
-                                                <div class="timeline-item__col timeline-item__col--description">
-                                                    <div class="timeline-item__title">Graduate Assistant - Statistical Consulting </div>
-                                                    <div class="timeline-item__description">Worked in a team on projects (research,medical) for clients under the guidance of a statistician. I assembled weekly progress reports and updated objectives. The results were often presented both formally and informally. 
-                                                </div>
-
-
-                                            </div>
-                                        </div>
-
+                                            
 
                                         <div class="timeline-item">
                                                 <div class="timeline-item__col timeline-item__col--info">
@@ -203,7 +217,8 @@
                                                     <img src="uploads/resume/lbeach.png" alt=""> </div>
                                                 <div class="timeline-item__col timeline-item__col--description">
                                                     <div class="timeline-item__title">Graduate Assistant</div>
-                                                    <div class="timeline-item__description">Led undergraduate lab classes. I also worked in the math tutoring center and updated software in the computer lab, assisted the professor in class,and graded assignments.</div>
+                                                    <div class="timeline-item__description">Led undergraduate lab classes. I also worked in  the statistical consulting group, math tutoring center and the computer lab. 
+                                                    </div>
                                                 </div>
 
                                             </div>
