--- a/resume.html
+++ b/resume.html
@@ -166,7 +166,7 @@
                                                     <div class="timeline-item__period">Jul 2016 - Now</div>
                                                     <div class="timeline-item__place">Teradata Labs</div>
                                                     <div class="timeline-item__location">San Diego, CA</div>
-                                                    <img src="uploads/resume/teralabs.png" alt=""> </div>
+                                                    <img src="uploads/resume/teralabs.jpg" alt=""> </div>
                                                 <div class="timeline-item__col timeline-item__col--description">
                                                     <div class="timeline-item__title">Data Scientist </div>
                                                     <div class="timeline-item__description"> 
