--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
                         <ul class="widget__list">
                              <li>Data Scientist</li>
                             <li>Baseball fan</li>
-                            <li>Avid golfer</li>
+                            <li>Golf enthusiast</li>
                         </ul>
                     </div>
                     <!-- .social-icons -->
