--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                         <ul class="widget__list">
                             <li>Data Scientist</li>
                             <li>Baseball fan</li>
-                            <li>Avid golfer</li>
+                            <li>Golf enthusiast</li>
                             <li></li>
                         </ul>
                     </div>
