--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
                         <ul class="widget__list">
                             <li>Data Scientist</li>
                             <li>Baseball Fan</li>
-                            <li>Golfer</li>
+                            <li>Golf enthusiast</li>
                             <li></li>
                         </ul>
                     </div>
