--- a/resume.html
+++ b/resume.html
@@ -101,7 +101,7 @@
                         <ul class="widget__list">
                             <li>Data Scientist</li>
                             <li>Baseball fan</li>
-                            <li>Avid golfer</li>
+                            <li>Golf enthusiast</li>
                             <li></li>
                         </ul>
                     </div>
@@ -147,7 +147,7 @@
                     <section class="page-resume">
                         <div class="layout-title-wrapper layout-row">
                             <h1 class="layout-title layout-container-width layout-container">Resume.
-                                <span class="layout-title__subtitle">Up-to-date</span>
+                                <span class="layout-title__subtitle"></span>
                             </h1>
                         </div>
                         <div class="layout-row">
@@ -259,7 +259,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="progress-bar-wrap">
-                                                    <div class="progress-bar__name">MySQL</div>
+                                                    <div class="progress-bar__name">SQL</div>
                                                     <div class="progress-bar">
                                                         <div class="progress-bar__wrapper">
                                                             <div class="progress-bar__bar" data-level="80">
