--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -51,7 +51,7 @@
                                 <span class="main-nav__item-icon-wrapper">
                                     <i class="main-nav__item-icon icon-books"></i>
                                 </span>
-                                <span class="main-nav__item-content">Portfolio</span>
+                                <span class="main-nav__item-content">Projects</span>
                             </a>
                         </li>
                         <li class="main-nav__item">
@@ -59,7 +59,7 @@
                                 <span class="main-nav__item-icon-wrapper">
                                     <i class="main-nav__item-icon icon-blog"></i>
                                 </span>
-                                <span class="main-nav__item-content">Blog</span>
+                                <span class="main-nav__item-content">Blockchains</span>
                             </a>
                         </li>
                         <li class="main-nav__item">
@@ -89,9 +89,9 @@
                     <div class="sidebar__site-name">Ryan Speed</div>
                     <div class="widget">
                         <ul class="widget__list">
-                            <li>Data Scientist</li>
-                            <li>Baseball fan</li>
-                            <li>Avid golfer</li>
+                             <li>Data Scientist</li>
+                            <li>Baseball Fan</li>
+                            <li>Blockchain Enthusiast</li>
                             <li></li>
                         </ul>
                     </div>
@@ -112,11 +112,7 @@
                                 <i class="fa fa-google-plus"></i>
                             </a>
                         </li>
-                        <li>
-                            <a href="https://pinterest.com/" target="_blank" class="social-icon--pinterest">
-                                <i class="fa fa-pinterest"></i>
-                            </a>
-                        </li>
+                       
                         <li>
                             <a href="https://www.linkedin.com/" target="_blank" class="social-icon--linkedin">
                                 <i class="fa fa-linkedin"></i>
@@ -125,7 +121,7 @@
                     </ul>
                     <!-- end .social-icons -->
                     <footer class="footer">
-                        <p class="footer__copyright">&copy; Rossi, 2015. All rights reserved.</p>
+                        <p class="footer__copyright">&copy; Speed, 2016. All rights reserved.</p>
                     </footer>
                 </div>
                 <!-- end .sidebar -->
@@ -136,8 +132,8 @@
                 <div class="layout-content">
                     <section class="page-portfolio-single">
                         <div class="layout-title-wrapper layout-row">
-                            <h1 class="layout-title layout-container-width layout-container">My Project.
-                                <span class="layout-title__subtitle">In detail</span>
+                            <h1 class="layout-title layout-container-width layout-container">Name1.
+                                <span class="layout-title__subtitle">Name2</span>
                             </h1>
                         </div>
                         <div class="layout-row">
@@ -145,8 +141,8 @@
                         </div>
                         <div class="portfolio-single__info layout-horizontal-padding">
                             <div>
-                                <div class="portfolio-single__info__name">Project name:</div>
-                                <div class="portfolio-single__info__description">Photoshoot for Vogue</div>
+                                <div class="portfolio-single__info__name">Something here:</div>
+                                <div class="portfolio-single__info__description"></div>
                             </div>
                             <div>
                                 <div class="portfolio-single__info__name">Completed:</div>
@@ -154,17 +150,17 @@
                             </div>
                             <div>
                                 <div class="portfolio-single__info__name">Client:</div>
-                                <div class="portfolio-single__info__description">Vogue</div>
+                                <div class="portfolio-single__info__description">here</div>
                             </div>
                             <p class="portfolio-single__info__text">
-                                I couldn't love a woman who inspired me to be totally disinterested. If I fell in love with a woman for an artistic reason, or from the point of view of my work, I think it would rob her of something. Jeans represent democracy in fashion. Fashion never stops. There is always the new project, the new opportunity. Fashion can be this mysterious thing that you can't explain. I truly believe that philanthropy and commerce can work together.
+                              text
                             </p>
                         </div>
                     </section>
                 </div>
                 <!-- end .layout-content -->
                 <div class="footer--bottom layout-row">
-                    <p class="footer__copyright">&copy; Rossi, 2015. All rights reserved.</p>
+                    <p class="footer__copyright">&copy; Speed, 2016. All rights reserved.</p>
                 </div>
             </div>
         </div>
@@ -182,29 +178,6 @@
         <script type="text/javascript" src="assets/jslib/jquery.hoverdir.js"></script>
         <script type="text/javascript" src="assets/js/Template.js"></script>
         <!-- end javascripts -->
-        <!-- .style-panel -->
-        <div class="style-panel" style="display:none">
-            <div class="style-panel__button">
-                <i class="fa fa-paint-brush"></i>
-            </div>
-            <div class="style-panel__title">Choose a color:</div>
-            <div class="style-panel__colors">
-                <a data-value="style1" href="portfolio-single.html#" class="style-panel__color style-panel__color--style1"></a>
-                <a data-value="style2" href="portfolio-single.html#" class="style-panel__color style-panel__color--style2"></a>
-                <a data-value="style3" href="portfolio-single.html#" class="style-panel__color style-panel__color--style3"></a>
-                <a data-value="style4" href="portfolio-single.html#" class="style-panel__color style-panel__color--style4"></a>
-                <a data-value="style5" href="portfolio-single.html#" class="style-panel__color style-panel__color--style5"></a>
-                <a data-value="style6" href="portfolio-single.html#" class="style-panel__color style-panel__color--style6"></a>
-            </div>
-            <div class="style-panel__info">and many more...</div>
-            <div class="style-panel__reset">
-                <button class="btn-reset btn btn-xs btn--style1">reset</button>
-            </div>
-        </div>
-        <!-- end .style-panel -->
-        <!-- style panel assets -->
-        <script type="text/javascript" src="assets/jslib/jquery.cookie.js"></script>
-        <script type="text/javascript" src="assets/js/StylePanel.js"></script>
-        <!-- end style panel assets -->
+     
     </body>
 </html>
