--- a/resume.html
+++ b/resume.html
@@ -59,15 +59,15 @@
                         <li class="main-nav__item">
                             <a class="main-nav__item-link" href="blog.html">
                                 <span class="main-nav__item-icon-wrapper">
-                                    <i class="main-nav__item-icon icon-blog"></i>
+                                    <i class="main-nav__item-icon icon-coin-dollar"></i>
                                 </span>
-                                <span class="main-nav__item-content">Blog</span>
+                                <span class="main-nav__item-content">Blockchains</span>
                             </a>
                         </li>
                         <li class="main-nav__item">
                             <a class="main-nav__item-link" href="portfolio.html">
                                 <span class="main-nav__item-icon-wrapper">
-                                    <i class="main-nav__item-icon icon-books"></i>
+                                    <i class="main-nav__item-icon icon-binoculars"></i>
                                 </span>
                                 <span class="main-nav__item-content">Getaways</span>
                             </a>
@@ -100,8 +100,8 @@
                     <div class="widget">
                         <ul class="widget__list">
                             <li>Data Scientist</li>
-                            <li>Baseball fan</li>
-                            <li>Golf enthusiast</li>
+                            <li>Baseball Fan</li>
+                            <li>Blockchain Enthusiast</li>
                             <li></li>
                         </ul>
                     </div>
@@ -122,11 +122,7 @@
                                 <i class="fa fa-google-plus"></i>
                             </a>
                         </li>
-                        <li>
-                            <a href="https://pinterest.com/" target="_blank" class="social-icon--pinterest">
-                                <i class="fa fa-pinterest"></i>
-                            </a>
-                        </li>
+                        
                         <li>
                             <a href="https://www.linkedin.com/" target="_blank" class="social-icon--linkedin">
                                 <i class="fa fa-linkedin"></i>
@@ -154,11 +150,11 @@
                             <!-- .accordion-group -->
                             <div class="accordion-group" role="tablist" aria-multiselectable="true">
                                 <div class="accordion-item accordion-item--layout">
-                                    <h2 data-toggle="collapse" data-target="#collapse0" class="accordion-title layout-container">
+                                    <h2 data-toggle="collapse" data-target="#collapse0" class="accordion-title layout-container collapsed">
                                         <i class="accordion-title__icon fa fa-suitcase"></i>Experience
                                         <i class="accordion-title__state-icon fa "></i>
                                     </h2>
-                                    <div id="collapse0" class="accordion-item__panel collapse in">
+                                    <div id="collapse0" class="accordion-item__panel collapse">
                                         <!-- .timeline -->
                                         <div class="timeline timeline--layout layout-container">
                                             <div class="timeline-item">
@@ -170,7 +166,7 @@
                                                 <div class="timeline-item__col timeline-item__col--description">
                                                     <div class="timeline-item__title">Data Scientist </div>
                                                     <div class="timeline-item__description"> 
-                                                    --- 
+                                                   I design, prototype, test and document algorithms and predictive analytics for automated decision making.
                                                 </div>
 
 
@@ -446,29 +442,6 @@
         <script type="text/javascript" src="assets/jslib/jquery.hoverdir.js"></script>
         <script type="text/javascript" src="assets/js/Template.js"></script>
         <!-- end javascripts -->
-        <!-- .style-panel -->
-        <div class="style-panel" style="display:none">
-            <div class="style-panel__button">
-                <i class="fa fa-paint-brush"></i>
-            </div>
-            <div class="style-panel__title">Choose a color:</div>
-            <div class="style-panel__colors">
-                <a data-value="style1" href="resume.html#" class="style-panel__color style-panel__color--style1"></a>
-                <a data-value="style2" href="resume.html#" class="style-panel__color style-panel__color--style2"></a>
-                <a data-value="style3" href="resume.html#" class="style-panel__color style-panel__color--style3"></a>
-                <a data-value="style4" href="resume.html#" class="style-panel__color style-panel__color--style4"></a>
-                <a data-value="style5" href="resume.html#" class="style-panel__color style-panel__color--style5"></a>
-                <a data-value="style6" href="resume.html#" class="style-panel__color style-panel__color--style6"></a>
-            </div>
-            <div class="style-panel__info">and many more...</div>
-            <div class="style-panel__reset">
-                <button class="btn-reset btn btn-xs btn--style1">reset</button>
-            </div>
-        </div>
-        <!-- end .style-panel -->
-        <!-- style panel assets -->
-        <script type="text/javascript" src="assets/jslib/jquery.cookie.js"></script>
-        <script type="text/javascript" src="assets/js/StylePanel.js"></script>
-        <!-- end style panel assets -->
+     
     </body>
 </html>
