--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                                 <span class="main-nav__item-icon-wrapper">
                                     <i class="main-nav__item-icon icon-books"></i>
                                 </span>
-                                <span class="main-nav__item-content">Blog</span>
+                                <span class="main-nav__item-content">Blockchains</span>
                             </a>
                         </li>
                         <li class="main-nav__item">
@@ -99,8 +99,8 @@
                     <div class="widget">
                         <ul class="widget__list">
                             <li>Data Scientist</li>
-                            <li>Baseball fan</li>
-                            <li>Golf enthusiast</li>
+                            <li>Baseball Fan</li>
+                            <li>Blockchain Enthusiast</li>
                             <li></li>
                         </ul>
                     </div>
@@ -144,11 +144,7 @@
                 <!-- .layout-content -->
                 <div class="layout-content">
                     <section class="page-contact">
-                        <div class="layout-title-wrapper layout-row">
-                            <h1 class="layout-title layout-container-width layout-container">contact.
-                                <span class="layout-title__subtitle">Wanna talk to me?</span>
-                            </h1>
-                        </div>
+                       
                         <div class="layout-row">
                             <div id="savvyMapCanvas" class="google-map--contact"></div>
                         </div>
@@ -183,7 +179,7 @@
                                 </li>
                                 <li>
                                     <i class="fa fa-phone"></i>
-                                    <span>(555) 555-5555</span>
+                                    <span>Don't call me!</span>
                                 </li>
                                 <li>
                                     <i class="fa fa-map-marker"></i>
